Fix spacing in mobile company detail

--- a/src/components/Headline/styles.module.scss
+++ b/src/components/Headline/styles.module.scss
@@ -15,6 +15,7 @@
 
 @media (max-width: $mobileContainerThreshold) {
   .detailHeadline {
+    margin-top: $bigSpacing;
     word-break: break-word;
   }
 }
